--- a/css/style.css
+++ b/css/style.css
@@ -32,13 +32,18 @@ h1 {
 	font-size:12px;
 	width: 800px;
 	height: 77px;
-	margin: auto;
 	font-weight: bold;
 	background-color: #2cfffe;
-	vertical-align: center;
 	margin-top: 15px;
-	margin-bottom: 25px;
+	margin-bottom: 15px;
 	padding-top: 3px;
+}
+
+.ad-wrap {
+	border-bottom: 1px solid #d8dcdf;
+	margin-left: 80px;
+	margin-right: 80px;
+	margin-bottom: 15px;
 }
 
 .adbox2 {
@@ -48,36 +53,35 @@ h1 {
 	font-size:12px;
 	font-weight: bold;
 	background-color: #2cfffe;
-	margin-right: 5px;
 	margin-top: 15px;
 	margin-bottom: 15px;
 }
 
 .container {
-	width: 800px;
 	margin-bottom: 17px;
 }
 
 .main-sidebar {
-	margin-right: 40px;
+	margin-left: 80px;
+	margin-right: 120px;
 }
 
 .center-story {
 	text-align: center;
-	padding-left:18px;
-	padding-right: 18px;
+	padding-left: 80px;
+	padding-right: 80px;
 }
 
 .most-viewed-stories {
+	margin-left: 90px;
+	margin-right: 25px;
+	padding-left: 40px;
 }
 
-.refers-row {
-	border-top: 1px solid #d8dcdf;
-	padding-top: 15px;
+.refers {
 	padding-bottom: 10px;
-}
-
-.refer {
+	margin-left: 80px;
+	margin-right: -160px;
 }
 
 .byline {
@@ -109,7 +113,7 @@ h1 {
 
 img {
 	width: 80%;
-	padding-top: 15px;
+	padding-top: 12px;
 }
 
 .caption {
@@ -134,7 +138,7 @@ h4 {
 	font-family: 'Lora', serif;
 	font-size: 12px;
 	line-height: 14px;
-	padding: 8px 10px 5px 0px;
+	margin-right: 25px;
 }
 
 .center-story .summary {
@@ -143,13 +147,14 @@ h4 {
 	line-height: 14px;
 	padding-bottom: 13px;
 	border-bottom: 1px solid #d8dcdf;
-	padding-left: 40px;
-	padding-right: 40px;
+	padding-left: 25px;
+	padding-right: 25px;
+	margin-left: 20px;
+	margin-right: 20px;
 }
 
 ol {
     counter-reset:li; 
-    margin-left: 0px; 
     padding-left:0px;
     font-family: 'Lato', sans-serif;
     font-size: 10.5px;
@@ -158,7 +163,7 @@ ol {
 
 ol > li {
     position:relative;
-    margin: 4px 0px 6px 15px;
+    margin: 4px 0px 6px 10px;
     list-style:none;
     border-bottom: 1px solid #d8dcdf;
     padding: 6px;
@@ -171,7 +176,7 @@ ol > li:before {
     top:-2px;
     left:-30px;
     width:32px;
-    margin-right:8px;
+    margin-right: 8px;
     padding:6px;
     text-align:center;
 }
@@ -188,6 +193,7 @@ h2 {
 
 h4 {
 	font-family: 'Lora', serif;
+	padding: 8px 10px 5px 0px;
 }
 
 .kicker {
